--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,23 @@
-# CakePHP 3
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/vendor/*
-/config/app.php
+# dependencies
 /node_modules
-.idea
-/tmp/cache/models/*
-!/tmp/cache/models/empty
-/tmp/cache/persistent/*
-!/tmp/cache/persistent/empty
-/tmp/cache/views/*
-!/tmp/cache/views/empty
-/tmp/sessions/*
-!/tmp/sessions/empty
-/tmp/tests/*
-!/tmp/tests/empty
+/.pnp
+.pnp.js
 
-/logs/*
-!/logs/empty
+# testing
+/coverage
 
-# CakePHP 2
+# production
+/build
 
-/app/tmp/*
-/app/Config/core.php
-/app/Config/database.php
-/vendors/*
-*.log
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
