--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.7.2",
+    "webpack": "^4.41.2"
   }
 }
